<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="welcome_text_view">Welcome</string>
    <string name="click_the_button_to_continue">Click the button to continue</string>
    <string name="about_text">This is a virtual shoe store where you can add, edit or delete certain models of shoes</string>
    <string name="continue_text">Push the button and check the existing list of shoes</string>
    <string name="shoe_list">Shoe List</string>
    <string name="shoe_description">Comfortable snickers which protect your feet and provide perfect grip on any surface</string>
    <string name="insert_a_shoe_name">insert a shoe name</string>
    <string name="logout">Logout</string>
    <string name="list_of_items">list_of_items</string>
</resources>
