<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/instructions_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".ui.instruction_screen.InstructionFragment">

        <TextView
            android:id="@+id/textView"
            style="@style/my_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/about_text"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView3"
            style="@style/my_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/continue_text"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_to_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/shoe_list"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_primary"
            android:backgroundTint="@color/colorPrimary"/>
    </LinearLayout>
</layout>
