<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        tools:context=".ui.login_screen.LoginFragment">

        <!-- TODO: Update blank fragment layout -->


        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/create_account"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnLogin"
            app:layout_constraintEnd_toStartOf="@+id/btnLogin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCreateAccount"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

        </EditText>

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>